Supports loading data npy files from local disks. Added features to match up satellite measurements starting the same time

--- a/toLabel.ipynb
+++ b/toLabel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,42 +24,49 @@
     "outpath = '/Users/aleex/DSE/Machine Learning/Project/label/'\n",
     "if not os.path.exists(outpath):\n",
     "    os.makedirs(outpath)\n",
-    "    \n"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/aleex/DSE/Machine Learning/Project/toyData/OR_ABI-L1b-RadF-M6C07_G16_s20192210000548_e20192210010268_c20192210010328.npy', '/Users/aleex/DSE/Machine Learning/Project/toyData/OR_ABI-L1b-RadF-M6C07_G16_s20192220000555_e20192220010275_c20192220010333.npy']\n"
+      "{'s20192210000': ['/Users/aleex/DSE/Machine Learning/Project/toyData/OR_ABI-L1b-RadF-M6C07_G16_s20192210000548_e20192210010268_c20192210010328.npy', '/Users/aleex/DSE/Machine Learning/Project/toyData/OR_ABI-L1b-RadF-M6C07_G17_s20192210000339_e20192210009416_c20192210009459.npy']}\n"
      ]
     }
    ],
    "source": [
-    "#To be modified on both Goes16 and 17\n",
-    "filenames = []\n",
+    "def getUniTime(filename):\n",
+    "    splits = filename.split('_')\n",
+    "    return splits[-3][:-3]\n",
+    "\n",
+    "file_dict = {}\n",
     "for root, dirs, files in os.walk(mainpath):\n",
     "    for file in files:\n",
     "        if file.endswith(\".npy\"):\n",
-    "             filenames.append(os.path.join(root, file))\n",
-    "print(filenames)"
+    "            uniTime = getUniTime(file)\n",
+    "            if uniTime not in file_dict:\n",
+    "                file_dict[uniTime] = []\n",
+    "            file_dict[uniTime].append(os.path.join(root, file))\n",
+    "                \n",
+    "print(file_dict)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Takes the urls for GOES16 and GOES17 from the same time\n",
-    "def genLabel(goes16url, goes17url):\n",
-    "    goes16 = np.load(goes16url)\n",
-    "    goes17 = np.load(goes17url)\n",
+    "def genLabel(goes16, goes17):\n",
+    "    goes16 = np.load(goes16)\n",
+    "    goes17 = np.load(goes17)\n",
     "\n",
     "    n1 = len(goes16)*len(goes16[0])\n",
     "    n2 = len(goes17)*len(goes17[0])\n",
@@ -75,21 +82,20 @@
     "    label = delta//diff_std\n",
     "    label = label.astype(int)\n",
     "    \n",
-    "    return label\n",
-    "\n"
+    "    return label\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def writeH5(data, label):\n",
+    "#Outputs the data of G17 and the generated label in HDF5\n",
+    "def writeH5(data, label, uniTime):\n",
     "    coords = np.array(data).astype(np.float)\n",
     "    shape = coords.shape\n",
-    "    #Filename here needs to match the actual name\n",
-    "    hdf5_path = outpath + filename + '.h5'\n",
+    "    hdf5_path = outpath + uniTime + '.h5'\n",
     "    with h5py.File(hdf5_path, mode='w') as f:\n",
     "        d = f.create_dataset('/data', data = coords)\n",
     "        l = f.create_dataset('/label', data = label)\n",
@@ -98,12 +104,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/Users/aleex/DSE/Machine Learning/Project/toyData/OR_ABI-L1b-RadF-M6C07_G16_s20192210000548_e20192210010268_c20192210010328.npy', '/Users/aleex/DSE/Machine Learning/Project/toyData/OR_ABI-L1b-RadF-M6C07_G17_s20192210000339_e20192210009416_c20192210009459.npy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in file_dict:\n",
+    "    pair = file_dict[key]\n",
+    "    if len(pair) == 2:\n",
+    "        print(pair)\n",
+    "        labels = genLabel(pair[0], pair[1])\n",
+    "        writeH5(np.load(pair[1]), labels, key)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = outpath + 'label1.txt'\n",
-    "np.savetxt(out, label, fmt='%10.f')"
+    "#out = outpath + 'label1.txt'\n",
+    "#np.savetxt(out, label, fmt='%10.f')"
    ]
   },
   {
@@ -180,12 +208,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rootURL = \"https://gitlab.com/adomakor412/goesdata/-/blob/master/fall_npy/221/\"\n",
+    "'''rootURL = \"https://gitlab.com/adomakor412/goesdata/-/blob/master/fall_npy/221/\"\n",
     "\n",
     "def listurls(prefix,html):\n",
     "    soup = BeautifulSoup(html.text)\n",
     "    urllist = [elt['href'] for elt in soup.find_all(href=re.compile(prefix))]\n",
-    "    return urllist"
+    "    return urllist'''"
    ]
   },
   {
@@ -206,7 +234,7 @@
     }
    ],
    "source": [
-    "\n",
+    "'''\n",
     "for s in range(16,18):\n",
     "    SS = str(s).zfill(2)\n",
     "    for i in range(221,238):#the website for particular day   \n",
@@ -231,7 +259,7 @@
     "                    prefix = \"OR_ABI-L1b-RadF-M6C\" + str(band).zfill(2)\n",
     "                    bandURLList = listurls(prefix,req)\n",
     "                    print(bandURLList)\n",
-    "                    print(*bandURLList,sep='\\n', file=f)"
+    "                    print(*bandURLList,sep='\\n', file=f)'''"
    ]
   },
   {
@@ -334,7 +362,7 @@
     }
    ],
    "source": [
-    "rootURL = \"https://gitlab.com/adomakor412/goesdata/-/blob/master/fall_npy/221/\"\n",
+    "'''rootURL = \"https://gitlab.com/adomakor412/goesdata/-/blob/master/fall_npy/221/\"\n",
     "page = requests.get(rootURL).text\n",
     "soup = BeautifulSoup(page, 'html.parser')\n",
     "\n",
@@ -342,7 +370,54 @@
     "for link in url_table:  \n",
     "    if link.has_attr('href'):\n",
     "            print(link['href'])\n",
-    "#print(url_table[0:]['href'])"
+    "#print(url_table[0:]['href'])'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataSource = np.DataSource(None)\n",
+    "response = np.DataSource('https://gitlab.com/adomakor412/goesdata/-/blob/master/fall_npy/221/OR_ABI-L1b-RadF-M6C07_G16_s20192210000548_e20192210010268_c20192210010328.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='/Users/aleex/DSE/Machine Learning/Project/https:/gitlab.com/adomakor412/goesdata/-/blob/master/fall_npy/221/OR_ABI-L1b-RadF-M6C07_G16_s20192210000548_e20192210010268_c20192210010328.npy/gitlab.com/adomakor412/goesdata/-/blob/master/fall_npy/221/OR_ABI-L1b-RadF-M6C07_G16_s20192210000548_e20192210010268_c20192210010328.npy' mode='r' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.open('https://gitlab.com/adomakor412/goesdata/-/blob/master/fall_npy/221/OR_ABI-L1b-RadF-M6C07_G16_s20192210000548_e20192210010268_c20192210010328.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<numpy.DataSource object at 0x11c344250>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)"
    ]
   },
   {
