--- a/toLabel-Copy1.ipynb
+++ b/toLabel-Copy1.ipynb
@@ -3573,6 +3573,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1//1)\n",
+    "print(1.1//1)\n",
+    "print(.1//1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
