--- a/CreateNumpy_401_1001.ipynb
+++ b/CreateNumpy_401_1001.ipynb
@@ -508,6 +508,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# DQF Script NetCDF for G17 day 221 through 229 for bands 7, 8, 9, 10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def DQF_create_nc_Numpy(ncFile, pathIn, pathOut):\n",
+    "    myFile = xr.open_dataset(op.join(pathIn,ncFile))\n",
+    "    dat = myFile.metpy.parse_cf('DQF')#don't think this key specification matters\n",
+    "    geos = dat.metpy.cartopy_crs\n",
+    "\n",
+    "    cartopy_extent_goes = geos.x_limits + geos.y_limits\n",
+    "    pyresample_extent_goes = (cartopy_extent_goes[0],\n",
+    "                                cartopy_extent_goes[2],\n",
+    "                                cartopy_extent_goes[1],\n",
+    "                                cartopy_extent_goes[3])\n",
+    "    goes_params = geos.proj4_params\n",
+    "    dqf = dat.data\n",
+    "    \n",
+    "    def normIm(im,gamma=1.0,reverse=False):\n",
+    "        nim = ((im-np.nanmin(im))*(np.nanmax(im)-np.nanmin(im))**(-1))\n",
+    "        if reverse:#want clouds to be white\n",
+    "            nim = (1.0-nim**(gamma))\n",
+    "        return nim\n",
+    "    \n",
+    "    def goes_2_roi(loaded_goes, \n",
+    "               target_extent,\n",
+    "               target_rows,#actual length or base\n",
+    "               target_cols,#actual width or height\n",
+    "               cartopy_target_proj,\n",
+    "               data_key='DQF',\n",
+    "               radius_of_influence=50000):\n",
+    "        \"\"\"Function that goes from loaded GOES data to data resampled in a projection for an extent\"\"\"\n",
+    "        dat = loaded_goes.metpy.parse_cf('DQF')\n",
+    "        geos_crs = dat.metpy.cartopy_crs\n",
+    "        cartopy_source_extent = geos_crs.x_limits + geos_crs.y_limits\n",
+    "        pyresample_source_extent = (cartopy_source_extent[0],\n",
+    "                                    cartopy_source_extent[2],\n",
+    "                                    cartopy_source_extent[1],\n",
+    "                                    cartopy_source_extent[3])\n",
+    "        dqf = dat.data\n",
+    "        source_area = geometry.AreaDefinition('GOES-1X', 'Full Disk','GOES-1X', \n",
+    "                                              geos_crs.proj4_params,\n",
+    "                                              dqf.shape[1], dqf.shape[0],\n",
+    "                                              pyresample_source_extent)\n",
+    "        area_target_def = geometry.AreaDefinition('areaTest', 'Target Region', 'areaTest',\n",
+    "                                            cartopy_target_proj.proj4_params,\n",
+    "                                            target_rows, target_cols,\n",
+    "                                            target_extent)\n",
+    "        geos_con_nn = image.ImageContainerNearest(dqf, \n",
+    "                                                source_area, \n",
+    "                                                radius_of_influence=radius_of_influence)\n",
+    "\n",
+    "        # Here we are using pyresample for the remapping\n",
+    "        area_proj_con_nn = geos_con_nn.resample(area_target_def)\n",
+    "        return area_proj_con_nn.image_data\n",
+    "        \n",
+    "    def cartopy_pyresample_toggle_extent(input_extent):\n",
+    "        return np.array(input_extent)[np.array([0,2,1,3])]\n",
+    "\n",
+    "    def trasform_cartopy_extent(source_extent,source_proj, target_proj):\n",
+    "        target_extent = target_proj.transform_points(source_proj, \n",
+    "                                                     np.array(source_extent[:2]),\n",
+    "                                                     np.array(source_extent[2:])).ravel()\n",
+    "        # target_extent in 3D, must be in 2D\n",
+    "        return cartopy_pyresample_toggle_extent(np.array(target_extent)[np.array([0,1,3,4])])\n",
+    "    pc = ccrs.PlateCarree()\n",
+    "    mc = ccrs.Mercator()\n",
+    "\n",
+    "    # Convert extent from pc to mc (both cylindrical projections)\n",
+    "    extent_pc = [-109.59326, -102.40674, 8.94659, -8.94656]\n",
+    "    \n",
+    "    target_extent_mc_cartopy = trasform_cartopy_extent(extent_pc, pc, mc)\n",
+    "    target_extent_mc_pyresample = cartopy_pyresample_toggle_extent(target_extent_mc_cartopy)\n",
+    "    \n",
+    "    roi_dqfs = goes_2_roi(myFile,\n",
+    "               target_extent_mc_pyresample,\n",
+    "               401,1001,\n",
+    "               mc)\n",
+    "    ####\n",
+    "    full_filename = op.join(pathOut,ncFile[:-3])\n",
+    "    np.save(full_filename,roi_dqfs)\n",
+    "    myFile.close()\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-995453001917>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0msourcePath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/sharedData/scratch/spring_data/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"G16_G17_url_list/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mdirs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtxtFile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdirs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "__name__ = '__main__'\n",
+    "if __name__ == '__main__':#creates npy resampled image data from satellite data FOR FALL DATA\n",
+    "    from pathlib import Path\n",
+    "    sourcePath = '/sharedData/scratch/spring_data/'\n",
+    "    path = \"G16_G17_url_list/\"\n",
+    "    dirs = os.listdir( path )\n",
+    "    \n",
+    "    for txtFile in dirs:\n",
+    "        \n",
+    "        txtFileName = txtFile[:-4]\n",
+    "        SS = txtFileName[1:3]\n",
+    "        day = str(int(txtFileName[12:14]) + 90).zfill(3)\n",
+    "        match = 'G' + SS + '_s2019' + day\n",
+    "\n",
+    "        subDir = '../../goesdata/DQF'\n",
+    "\n",
+    "        data = Path ( sourcePath )\n",
+    "        res = [f for f in os.listdir(data) if re.search(match,f)]\n",
+    "        \n",
+    "        with open('log', 'a') as log:\n",
+    "            for nc in res:\n",
+    "                testNC = nc[:-3] + '.npy'\n",
+    "                day = nc[31:34]\n",
+    "                \n",
+    "                ### CREATE FOLDERS FOR DAY NUMBERS ###\n",
+    "                folder = op.join(subDir,day)\n",
+    "                outFile = op.join(folder, testNC)\n",
+    "                \n",
+    "                print(nc)\n",
+    "                \n",
+    "                if op.exists(outFile) == True:#refactor to check if file already downloaded\n",
+    "                    continue\n",
+    "                    \n",
+    "                else:\n",
+    "                    if op.exists(folder):\n",
+    "                        pass\n",
+    "                    else:\n",
+    "                        cmd = [ \" \".join(['mkdir',folder]) ]\n",
+    "                        pid = Popen(cmd, shell=True)\n",
+    "                        pid.communicate()\n",
+    "                        \n",
+    "                    try:\n",
+    "                        DQF_create_nc_Numpy(nc,sourcePath,folder)#names and creates file\n",
+    "                       \n",
+    "                    except OSError as e:\n",
+    "                        print(e)\n",
+    "                        print('\\n')\n",
+    "                        print(nc, file=log)\n",
+    "                        print('\\n')\n",
+    "                        print(e, file=log)           \n",
+    "                "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
