--- a/testRF.ipynb
+++ b/testRF.ipynb
@@ -11,7 +11,6 @@
     "import os\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import recall_score\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
     "import pickle"
    ]
   },
@@ -34,9 +33,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "100%\r"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -61,7 +58,7 @@
     "    counter += 1\n",
     "    print(str(int((counter/len(files))*100)) + '%', end='\\r', flush = True)\n",
     "    \n",
-    "test_label[np.where(test_label > 4)] = 4    \n"
+    "test_label[np.where(test_label > 4)] = 4"
    ]
   },
   {
