script to generate and train on window data, one trained model of depth 10

--- a/loading_models.ipynb
+++ b/loading_models.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
+    "import h5py\n",
     "loaded_model = pickle.load(open('fitted_models/rf_model_depth10.sav', 'rb'))"
    ]
   },
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +49,7 @@
        "array([0.26273  , 0.2148777, 0.2475415, 0.2748508])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
