--- a/testRF.ipynb
+++ b/testRF.ipynb
@@ -11,6 +11,7 @@
     "import os\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
     "import pickle"
    ]
   },
@@ -20,8 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = 'data/fitted_models/rf_model_down_upsample_2_set_depth_10.sav'\n",
-    "FILE_NAME = 'test_files.txt'\n",
+    "MODEL_PATH = 'data/fitted_models/rf_model_window_set_depth_max_trees_500.sav'\n",
+    "FILE_NAME = 'test_files_2.txt'\n",
     "FILE_ROOT_PATH = ''\n"
    ]
   },
@@ -43,8 +44,8 @@
     "        line = line.strip('\\n')\n",
     "        files.append(FILE_ROOT_PATH + line)\n",
     "    \n",
-    "n = 401401\n",
-    "test_data = np.empty((n*len(files),4), float)\n",
+    "n = 399*999\n",
+    "test_data = np.empty((n*len(files),36), float)\n",
     "test_label = np.empty((n*len(files)), int)\n",
     "\n",
     "counter = 0\n",
@@ -113,13 +114,13 @@
    "source": [
     "loaded_model = pickle.load(open(MODEL_PATH, 'rb'))\n",
     "\n",
-    "acc = loaded_model.score(test_data, test_label)\n",
+    "#acc = loaded_model.score(test_data, test_label)\n",
     "predict_label = loaded_model.predict(test_data)\n",
     "overall_recall = recall_score(test_label, predict_label, average='weighted') #note try to run predict only once \n",
     "class_recall = recall_score(test_label, predict_label, average=None)\n",
     "bal_acc = balanced_accuracy_score(test_label, predict_label)\n",
     "\n",
-    "print('Mean Acc: ', acc)\n",
+    "#print('Mean Acc: ', acc)\n",
     "print('Average Recall: ', overall_recall)\n",
     "print('Single Class Recall: ', class_recall)\n",
     "print('Balanced Acc: ', bal_acc)"
